# Distro-linux-script

./: README.md  pyproject.toml
data/: distros.yml
data/images/: arch.txt  debian.txt  kali.txt  mint.txt  rocky.txt  ubuntu.txt
data/quotes/: arch.json  centos.json  debian.json  fedora.json  kali.json  mint.json  opensuse.json  parrot.json  raspberrypi.json  rocky.json  ubuntu.json
src/distro_says/: cli.py  core.py  render.py
