[build-system]

requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distro-says"
version = "0.1.0"
description = "What your linux distro says about you, in your terminal"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ 
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
distro-says = "distro_says.cli:main"
